# compio-mimalloc-issue

./: Cargo.toml
benches/: mimalloc.rs  mimalloc_direct.rs  read_direct.rs  usual_read.rs
src/: lib.rs
