[package]
name = "compio-mimalloc-issue"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = "0.16.0"
libc = "0.2.175"
mimalloc = "0.1.48"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "usual_read"
harness = false

[[bench]]
name = "read_direct"
harness = false

[[bench]]
name = "mimalloc"
harness = false

[[bench]]
name = "mimalloc_direct"
harness = false

[patch.crates-io]
# compio-driver = { path = "/home/inklesspen/Documents/thirdparty/compio/compio-driver" }
# compio-buf = { path = "/home/inklesspen/Documents/thirdparty/compio/compio-buf" }
# compio = { path = "/home/inklesspen/Documents/thirdparty/compio/compio" }
# compio-dispatcher = { path = "/home/inklesspen/Documents/thirdparty/compio/compio-dispatcher" }
# compio-io = { path = "/home/inklesspen/Documents/thirdparty/compio/compio-io" }
# compio-fs = { path = "/home/inklesspen/Documents/thirdparty/compio/compio-fs" }